--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,12 @@
 body {
 	background: url("../img/bg.png");
-	font-family: 'Hammersmith One', sans-serif;
+}
+
+p {
+	font-family: 'Open Sans', sans-serif;
+}
+
+/* Helper Classes */
+.showgrid {
+	background: url("../img/grid-bg.png");
 }
