--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,65 @@
 body {
 	background: url("../img/bg.png");
-}
-
-p {
 	font-family: 'Open Sans', sans-serif;
 }
+
+/*Navigation - all (base styling) links*/
+
+nav li {
+	float: left;
+	list-style: none;
+	margin: 0 20px
+}
+
+/*Navigation - link states*/
+
+nav a:link,
+nav a:visited {
+	padding: 20px 20px 20px 40px;
+}
+
+nav a:hover,
+nav a:active {
+
+}
+
+#first a:hover {
+	background: url("../img/link-1.png") no-repeat 0 center;
+}
+
+#second a:hover {
+	background: url("../img/link-2.png") no-repeat 0 center;
+}
+
+#third a:hover {
+	background: url("../img/link-3.png") no-repeat 0 center;
+}
+
+/*Style aside image round*/
+
+aside img ,
+section img {
+	border-radius: 10px;
+}
+
+/*first image border inside section*/
+
+section h3 + img {
+	border: 4px solid black;
+}
+
+h3 + p {
+	color: teal;
+}
+
+img + p {
+	color: green;
+}
+
+aside li ul > li {
+	background: red;
+}
+
 
 /* Helper Classes */
 .showgrid {
